crates/plotnik-lib/tests/05-typegen/naming/error_annotation_name_conflict.txt
Q = (program
  {(expression_statement) @foo :: QBar} @a
  {(lexical_declaration) @x} @bar
)
------------------ DIAGNOSTICS -------------------
error: type name `QBar` is already used for a different type
 --> query.ptk:3:3
  |
2 |   {(expression_statement) @foo :: QBar} @a
  |                                   ---- already used here
3 |   {(lexical_declaration) @x} @bar
  |   ^^^^^^^^^^^^^^^^^^^^^^^^^^
